--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,9 +1,6 @@
 
 {
   "routes": [
-    {
-      "route": "/*",
-      "serve": "/index.html"
-    }
+    { "route": "/*", "serve": "/index.html" }
   ]
 }
