updated prod server url

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://white-been-scanned-retro.trycloudflare.com
+VITE_API_BASE_URL=https://demogeneratorserver.proudtree-ef764c79.eastus.azurecontainerapps.io
